--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.5.0",
+    "@firebase/app": "^0.14.6",
+    "@firebase/auth": "^1.11.1",
+    "firebase": "^9.22.2",
     "firebase-admin": "^13.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
